# Prorgamming-hacking-2024

./: .gitmodules  CMakeLists.txt
docs/: SocketFns.md
src/client/: CMakeLists.txt  likeReal.h
src/client/UI/: message_sender.cpp  ui.h
src/core/: CMakeLists.txt
src/core/messages/: CMakeLists.txt  test.proto
src/core/network/: CMakeLists.txt  network.cpp
src/core/threading/: CMakeLists.txt
src/core/threading/containers/: containers.cpp  queue.h
src/core/threading/tasks/: tasks.cpp  tasks.h  thread_pool.cpp  thread_pool.h  threading.cpp  threading.h
src/inject/: CMakeLists.txt  main.cpp
src/inject/command_handlers/: message_handler.cpp  process_handler.h  process_win.cpp
src/ui/: CMakeLists.txt  machine_list_ui.h  machine_ui.cpp  machine_ui.h  main.cpp
test/: CMakeLists.txt
test/core/: threading_test.cpp
